--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
