--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,14 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.12.2",
+    "axios-cookiejar-support": "^6.0.4",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.18.3"
+    "mongoose": "^8.18.3",
+    "netcdfjs": "^3.0.0",
+    "tough-cookie": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
