--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ lerna-debug.log*
 node_modules/
 backend/node_modules/
 frontend/node_modules/ # Corrección aquí: 'frontend'
-
+backend/.netrc
 # Directorios de compilación y caché
 dist/
 dist-ssr/
