--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
+    "react-is": "^19.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "recharts": "^3.2.1"
