--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,36 @@
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+npm-debug.log* yarn-debug.log* yarn-error.log* pnpm-debug.log* lerna-debug.log*
 
-# Directorios de dependencias
-node_modules/
-backend/node_modules/
-frontend/node_modules/ # Corrección aquí: 'frontend'
-backend/.netrc
-# Directorios de compilación y caché
-dist/
-dist-ssr/
-.vite/               # Añadido: Carpeta de caché de Vite (en el frontend)
-.history/            # Añadido: Para editores como VS Code
-*.local              # Archivos de configuración local (ej. .env.local)
+# Dependency directories
+/node_modules
+/frontend/node_modules
+/backend/node_modules
 
-# Editor directories and files
-.vscode/
-!.vscode/extensions.json # Excepto este, si quieres compartir extensiones recomendadas
-.idea/
-.DS_Store
+# Build output and cache
+/dist
+/dist-ssr
+/.vite
+/.history
+*.local
+
+# IDE and editor files
+/.vscode/*
+!/.vscode/extensions.json
+/.idea
+/.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-# Archivos de entorno
+# Environment variables
 .env
 .env.local
 .env.*.local
+.env*.test
 
-# Archivos de imagen generados (si los hubiera)
-*.png
-*.jpg
-*.jpeg
-*.gif
-*.svg
-!frontend/src/components/assets/icons/graph-download-icon.svg
-!frontend/public/astrocast-logo.png
+# Credentials
+/backend/.netrc
